--- a/.github/workflows/build-installers.yml
+++ b/.github/workflows/build-installers.yml
@@ -19,6 +19,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+
+               - name: Install Linux dependencies
+       if: runner.os == 'Linux'
+       run: |
+         sudo apt-get update
+         sudo apt-get install -y build-essential libxss-dev python3 rpm fakeroot
       
       - name: Install dependencies
         run: npm install
